--- a/RegisterStyles.css
+++ b/RegisterStyles.css
@@ -3,11 +3,9 @@
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #F2F0F0;
-    margin: 0;
-    padding: 0;
     display:flex;
     flex-direction: column;
-    overflow: scroll;
+    height: 100%;
 }
 
 .navbar {
@@ -31,19 +29,20 @@ body {
 .main-section {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
     padding-left: 3%;
     padding-right: 0%;
+    margin-bottom: 5%;
+    height: auto;
     flex-grow: 1;
-    margin-bottom: 10%;
+    width: 100%;
 }
 
-/* Left Column */
 .left-column {
     max-width: 100%;
     margin-left: 1%;
     margin-right: 1%;
+    height: auto;
 }
 
 .left-column h1 {
@@ -58,7 +57,7 @@ body {
 }
 
 .left-column p {
-    max-width: 350px;
+    /* max-width: 350px; */
     font-size: 30px;
     font-family: 'Poppins', sans-serif;
     margin-top: 1rem;
@@ -78,10 +77,8 @@ body {
     max-width: 100%;
     margin-left: 3%;
     width: 666px;
-    height: 658px;
+    height: auto;
 }
-
-
 
 /* General styling for inputs */
 .input-container {
@@ -123,19 +120,6 @@ body {
 .input-container input.has-content {
     border-color: #ff6600;
 }
-
-/* The label starts off inside the input field */
-/* .input-container label {
-    position: absolute;
-    top: 40%;
-    left: 10px;
-    color: #aaa;
-    transform: translateY(-50%);
-    background-color: white;
-    padding: 0 5px;
-    transition: all 0.3s ease-in-out;
-    pointer-events: none;
-} */
 
 .input-container label {
     position: absolute;
@@ -339,11 +323,9 @@ footer {
     color: white;  
     text-align: center;  
     padding: 10px 0;
-    bottom: 0;
     width: 100%; 
     display: flex;
     justify-content: center;
-    flex-shrink: 0;
 }
 
 footer p {
