--- a/dashStyle.css
+++ b/dashStyle.css
@@ -1,12 +1,15 @@
 /* Styling for dashboard */
+*{
+    box-sizing: border-box;
+}
 .col-2 {
     background-color: #FC783F;
     height: 100vh;
 }
 
 .col-10 {
-    background-color: skyblue;
-    height: 100vh;
+    background-color: #f5f5f5;
+    height: 100vh; 
 }
 
 .sidebar {
@@ -16,10 +19,6 @@
     justify-content: center;
 }
 
-.topbar {
-    height: 12vh;
-    background-color: purple;
-}
 
 .btns {
     margin: 5em 5em 0 5em; 
@@ -133,4 +132,77 @@ ul li a img {
     align-items: center;
     margin: 0.2em 0em 0em 0em;
 }
+.dash{
+    position: absolute;
+    font-size: 2em;
+    font-weight: bold;
+    margin-top: -50px;
+}
 
+
+.proflist{
+    display: flex;
+    margin-left: 90em;
+}
+@media(max-width: 1400px){
+    .proflist{
+        margin-left:50em
+    }
+}   
+@media(max-width: 1920px){
+    .proflist{
+        margin-left:70em;
+        
+    }
+} 
+
+.proflist li{
+    margin-top: 2em;
+    list-style: none;
+}
+.proflist a{
+    color: black;
+    font-family: 'poppins', sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+}
+.proflist li div {
+    margin-top: 1px; /* Adjust spacing between name and title */
+}
+
+.proflist li h5 {
+    margin: 0; /* Remove default margin */
+    font-size: 14px; /* Adjust font size if needed */
+    color: #000; /* Change color as desired */
+}
+.separator{
+    width: 2px;
+    height: 90px;
+    background-color: #746767;
+    margin: 1em 4em;
+}
+.dash{
+    margin-top: 2em;
+    margin-left: 1.7em;
+    
+} 
+.topbar {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 12vh;
+    background-color: white;
+    /* text-shadow: 1px 1px 5px gray; */
+}
+/* .prof{
+    display: flex;
+    flex-direction: column;
+} */
+.notif img{
+    margin-top: 2.8em;
+}
+.notif{
+    display: flex;
+   
+    
+}
