--- a/ReaderStyle.css
+++ b/ReaderStyle.css
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 62vh;
+    height: 70vh;
     margin-top: 3em;
 }
 .button-group {
@@ -163,4 +163,33 @@ hr {
 .act{
     color: #e55a00;
     text-decoration: underline;
+}
+.pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center; /* Center the pagination */
+    margin-top: 10px; /* Space above the pagination */
+}
+#num{
+    color: #e55a00;
+}
+.pagination a {
+    text-decoration: none; /* Remove underline */
+    color: #7d6966; /* Change text color */
+    padding: 5px 15px; /* Space around links */
+    border-radius: 5px; /* Rounded corners */
+    transition: background-color 0.3s; /* Smooth transition */
+}
+
+.pagination a:hover {
+    background-color: #f0f0f0; /* Light background on hover */
+}
+
+.pagination .active {
+    background-color: #e55a00; /* Active page color */
+    color: white; /* Active page text color */
+}
+
+.pagination span {
+    padding: 0 10px; /* Space around icons */
 }
