--- a/dashStyle.css
+++ b/dashStyle.css
@@ -102,6 +102,11 @@ body, html {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); 
 }
 
+.separator {
+    height: 60px; /* Adjust the height of the line to your needs */
+    border-left: 2px solid gray; /* 2px solid black line */
+    margin: 0 10px; /* Add space around the separator */
+}
 
 #page-title {
     font-size: 2em;
@@ -111,6 +116,8 @@ body, html {
 #profile-section {
     display: flex; 
     align-items: center; 
+    max-width: 100%;
+    gap: 1em;
 }
 
 #notification {
@@ -122,6 +129,24 @@ body, html {
     flex-direction: row;
     align-items: center; 
     margin-left: 0.5em; 
+    flex-grow: 1;
+    white-space: nowrap;
+}
+
+span {
+    font-size: 13px;
+    font-weight: bold;
+    color: black;
+}
+
+#profile-section h5 {
+    font-size: 11px;
+    font-weight: lighter;
+    color: black;
+}
+
+#profile-image {
+    margin-right: 10%;
 }
 
 #profile img {
@@ -131,7 +156,14 @@ body, html {
 #profile-info {
     display: flex; 
     flex-direction: column;
+    flex-direction: left ;
     margin-left: 0.5em; 
+}
+.info-column {
+    display: flex;
+    align-items: center; /* Align items (image + text) in a row */
+    width: 100%; /* Make sure the anchor tag occupies the full width */
+    text-decoration: none;
 }
 
 /* #filters {
@@ -148,6 +180,8 @@ body, html {
     text-decoration: none;
 } */
 #main-content{
+    padding: 0;
+    margin: 0;
     background-color: #f5f5f5;
 }
 #filters a:hover {
