--- a/dashStyle.css
+++ b/dashStyle.css
@@ -202,5 +202,35 @@ span {
     margin-top: 4em;
     width: 100%;
     height: 70vh;
-    background-color: gray;
+    background-color: #fff;
+}
+/* STYLE for Reader's List TABLE */
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+}
+table, th, td {
+    border: 1px solid #ddd;
+}
+th, td {
+    padding: 12px;
+    text-align: left;
+}
+.view-more {
+    color: #f2653b;
+    text-decoration: none;
+}
+.pagination {
+    text-align: center;
+}
+.pagination a {
+    margin: 0 5px;
+    padding: 10px 15px;
+    text-decoration: none;
+    border-radius: 4px;
+    color: #f2653b;
+}
+.pagination a:hover {
+    background-color: #ff7f50;
 }
