--- a/ReaderStyle.css
+++ b/ReaderStyle.css
@@ -82,7 +82,7 @@ hr {
 
 .search-bar .search-icon {
     position: absolute;
-    left: 90%;
+    /* left: 90%; */
     top: 50%;
     transform: translateY(-50%);
 }
@@ -129,9 +129,6 @@ hr {
 }
 .sort-btn:hover, .filter-btn:hover {
     background-color: #e55a00; 
-}
-.search-icon{
-    margin-left: 16em;
 }
 .user-table {
     width: 95%; 
