--- a/HistoryStyle.css
+++ b/HistoryStyle.css
@@ -12,8 +12,8 @@
     background-color: #f5f5f5;
 }
 
-.Inventory-box {
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7); /* Subtle shadow effect */
+.History-box {
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7);
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -35,6 +35,7 @@ hr {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 20px;
 }
 
 /* Search */
@@ -42,11 +43,9 @@ hr {
     display: flex;
     justify-content: flex-start;
     gap: 10px;
-    margin-top: 10px;
-    /* position: relative; */
-    /* top: 10px;
+    position: relative;
     right: 20em;
-    bottom: 4em; */
+    bottom: 4em;
     
 }
 
@@ -74,26 +73,12 @@ hr {
 }
 
 /* Buttons */
-.sort-btn {
+.sort-btn, .filter-btn {
     font-size: 16px;
-    padding: 10px 20px; 
-    border: none;
+    padding: 10px 20px;
     border-radius: 30px;
-    background-color: #ff6600; 
-    color: white; 
     cursor: pointer;
     transition: background-color 0.3s ease;
-}
-.filter-btn{
-    font-size: 16px;
-    padding: 10px 20px; 
-    border: 1px solid #ff6600;
-    background-color: white;
-    color: #ff6600;
-    border-radius: 30px;
-}
-.sort-btn img, .filter-btn img {
-    margin: 0 5px; 
 }
 .addbtn {
     position: relative;
@@ -110,45 +95,59 @@ hr {
     color: white;
     border: none;
 }
-
+.sort-btn {
+    background-color: #ff6600;
+    color: white;
+    border: none;
+}
+.sort-btn{
+    float: right;
+}
 /* .sort-btn img:hover{
     filter: brightness(0) saturate(100%) invert(48%) sepia(96%) saturate(1150%) hue-rotate(10deg) brightness(96%) contrast(93%);
-} */
+}
 
-/* .sort-btn:hover{
+.sort-btn:hover{
     background-color: white;
     color: #ff6600;
     border: 1px solid #ff6600;
 } */
-
+.filter-btn {
+    border: 1px solid #ff6600;
+    background-color: white;
+    color: #ff6600;
+    
+}
 /* .filter-btn:hover {
     border: 1px solid #ff6600;
     background-color: #ff6600;
     color: white;
 } */
-
+.sort-btn img, .filter-btn img {
+    margin: 0 5px;
+}
 /* .filter-btn img:hover {
     filter: brightness(0) invert(1); 
 } */
 /* User Table */
-.Inventory-table {
+.History-table {
     width: 95%;
-    margin: 20px auto;
+    margin: 15px auto;
     border-collapse: collapse;
 }
 
-.Inventory-table th,
-.Inventory-table td {
+.History-table th,
+.History-table td {
     text-align: left;
     padding: 20px;
 }
 
-.Inventory-table th {
+.History-table th {
     background-color: #f0f0f0;
     font-weight: bold;
 }
 
-.Inventory-table tr {
+.History-table tr {
     border-bottom: 1px solid #7d6966;
 }
 
@@ -158,14 +157,14 @@ hr {
 }
 
 /* Pagination */
-.Inventory-pagination {
+.History-pagination {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 55px;
+    margin-top: 50px;
 }
 
-.Inventory-pagination a {
+.History-pagination a {
     text-decoration: none;
     color: #7d6966;
     padding: 5px 15px;
@@ -173,15 +172,15 @@ hr {
     transition: background-color 0.3s;
 }
 
-/* .Inventory-pagination a:hover {
+/* .History-pagination a:hover {
     background-color: #f0f0f0;
-} */
-
-.Inventory-pagination .active {
-    background-color: #e55a00;
-    color: white;
 }
 
-.Inventory-pagination span {
+.History-pagination .active {
+    background-color: #e55a00;
+    color: white;
+} */
+
+.History-pagination span {
     padding: 0 10px;
 }
