--- a/TransactionsStyle.css
+++ b/TransactionsStyle.css
@@ -17,10 +17,10 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 70vh;
+    height: 62vh;
     margin-top: 2em;
     background-color: #f5f5f5;
-    overflow-y: auto; 
+    overflow-y: auto;
     overflow-x: hidden;
 }
 
@@ -167,7 +167,7 @@
     float: right;
 }
 
-.sort-btn img:hover {
+/* .sort-btn img:hover {
     filter: brightness(0) saturate(100%) invert(48%) sepia(96%) saturate(1150%) hue-rotate(10deg) brightness(96%) contrast(93%);
 }
 
@@ -175,7 +175,7 @@
     background-color: white;
     color: #ff6600;
     border: 1px solid #ff6600;
-}
+} */
 
 .filter-btn {
     border: 1px solid #ff6600;
@@ -183,16 +183,16 @@
     color: #ff6600;
 }
 
-.filter-btn:hover {
+/* .filter-btn:hover {
     border: 1px solid #ff6600;
     background-color: #ff6600;
     color: white;
-}
+} */
 
 .sort-btn img, .filter-btn img {
     margin: 0 5px;
 }
 
-.filter-btn img:hover {
-    filter: brightness(0) invert(1); /* This will turn the image white */
-}
+/* .filter-btn img:hover {
+    filter: brightness(0) invert(1); 
+} */
