--- a/TransactionsOverdue.css
+++ b/TransactionsOverdue.css
@@ -12,8 +12,8 @@
     background-color: #f5f5f5;
 }
 
-.History-box {
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7);
+.Overdue-box {
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.7); /* Subtle shadow effect */
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -35,7 +35,6 @@ hr {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 20px;
 }
 
 /* Search */
@@ -43,9 +42,11 @@ hr {
     display: flex;
     justify-content: flex-start;
     gap: 10px;
-    position: relative;
+    margin-top: 10px;
+    /* position: relative; */
+    /* top: 10px;
     right: 20em;
-    bottom: 4em;
+    bottom: 4em; */
     
 }
 
@@ -73,81 +74,66 @@ hr {
 }
 
 /* Buttons */
-.sort-btn, .filter-btn {
-    font-size: 16px;
-    padding: 10px 20px;
-    border-radius: 30px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-.addbtn {
-    position: relative;
-    left: 34em;
-    font-size: 16px;
-    margin: 20px  20px 5px 20px;
-    padding: 10px 20px;
-    border-radius: 30px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-.addbtn {
-    background-color: #ff6600;
-    color: white;
-    border: none;
-}
 .sort-btn {
-    background-color: #ff6600;
-    color: white;
+    font-size: 16px;
+    padding: 10px 20px; 
     border: none;
+    border-radius: 30px;
+    background-color: #ff6600; 
+    color: white; 
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
-.sort-btn{
-    float: right;
+.filter-btn{
+    font-size: 16px;
+    padding: 10px 20px; 
+    border: 1px solid #ff6600;
+    background-color: white;
+    color: #ff6600;
+    border-radius: 30px;
 }
-/* .sort-btn img:hover{
-    filter: brightness(0) saturate(100%) invert(48%) sepia(96%) saturate(1150%) hue-rotate(10deg) brightness(96%) contrast(93%);
+.sort-btn img, .filter-btn img {
+    margin: 0 5px; 
 }
 
-.sort-btn:hover{
+/* .sort-btn img:hover{
+    filter: brightness(0) saturate(100%) invert(48%) sepia(96%) saturate(1150%) hue-rotate(10deg) brightness(96%) contrast(93%);
+} */
+
+/* .sort-btn:hover{
     background-color: white;
     color: #ff6600;
     border: 1px solid #ff6600;
 } */
-.filter-btn {
-    border: 1px solid #ff6600;
-    background-color: white;
-    color: #ff6600;
-    
-}
+
 /* .filter-btn:hover {
     border: 1px solid #ff6600;
     background-color: #ff6600;
     color: white;
 } */
-.sort-btn img, .filter-btn img {
-    margin: 0 5px;
-}
+
 /* .filter-btn img:hover {
     filter: brightness(0) invert(1); 
 } */
 /* User Table */
-.History-table {
+.Overdue-table {
     width: 95%;
-    margin: 15px auto;
+    margin: 20px auto;
     border-collapse: collapse;
 }
 
-.History-table th,
-.History-table td {
+.Overdue-table th,
+.Overdue-table td {
     text-align: left;
     padding: 20px;
 }
 
-.History-table th {
+.Overdue-table th {
     background-color: #f0f0f0;
     font-weight: bold;
 }
 
-.History-table tr {
+.Overdue-table tr {
     border-bottom: 1px solid #7d6966;
 }
 
@@ -157,14 +143,14 @@ hr {
 }
 
 /* Pagination */
-.History-pagination {
+.Overdue-pagination {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: 55px;
 }
 
-.History-pagination a {
+.Overdue-pagination a {
     text-decoration: none;
     color: #7d6966;
     padding: 5px 15px;
@@ -172,14 +158,15 @@ hr {
     transition: background-color 0.3s;
 }
 
-/* .History-pagination a:hover {
+/* .Inventory-pagination a:hover {
     background-color: #f0f0f0;
 } */
 
-.History-pagination span {
-    padding: 0 10px;
-}
-.History-pagination .active {
+.Overdue-pagination .active {
     background-color: #e55a00;
     color: white;
-} 
+}
+
+.Overdue-pagination span {
+    padding: 0 10px;
+}
