--- a/dashStyle.css
+++ b/dashStyle.css
@@ -163,6 +163,7 @@ body, html {
     height: 12vh;
     padding: 0 2em;
     border-bottom: 1px solid rgba(0, 0, 0, 0.5); /* Add this line for the bottom border */
+    margin-bottom: 3%;
 }
 
 .separator {
@@ -290,11 +291,12 @@ span {
     align-items: center;
     justify-content: center;
 }
-#body-content{
-    margin-top: 4em;
-    width: 100%;
-    height: 62vh;
-    background-color: gray;
+
+#body-content {
+    min-width: 100%;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
 }
 
 /* Profile Dropdown */
