Added Book Information

--- a/ReadersInformation.css
+++ b/ReadersInformation.css
@@ -79,7 +79,7 @@
     margin-bottom: 10px;
 
 }
-.SusBan-btn{
+.ReaderSusBan-btn{
     display: flex;
     justify-content: flex-end;
     padding: 10px;
