--- a/BookInformation.css
+++ b/BookInformation.css
@@ -12,11 +12,11 @@
     background-color: #f5f5f5;
 }
 
-.Readerbox {
+.Binfobox {
     display: flex;
     flex-direction: column;
     width: 80%;
-    height: 70vh;
+    height: 78vh;
     margin-top: 2em;
     background-color: #f5f5f5;
 }
@@ -30,7 +30,7 @@
 }
 
 #BboxView {
-    height: 70vh;
+    height: 80vh;
 }
 
 .Bview {
@@ -48,12 +48,13 @@
     width: 75%;
 }
 
-.SusBan-btn {
+.updatedelete-btn {
     display: flex;
     justify-content: flex-end;
     padding: 10px;
     position: relative;
     bottom: 4em;
+    right: 1em;
 
 }
 
