--- a/ReadersInformation.css
+++ b/ReadersInformation.css
@@ -21,6 +21,9 @@
     margin-top: 2em;
     background-color: #f5f5f5;
 }
+.Pdets{
+    margin-top: 3em;
+}
 
 .Readbox {
     display: flex;
@@ -66,6 +69,7 @@
 }
 .upbtn{
     margin-top: 20em;
+    margin-right: 1em;
    
 }
 
