--- a/HistoryStyle.css
+++ b/HistoryStyle.css
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 70vh;
+    height: 63svh;
     margin-top: 3.6em;
 }
 
@@ -134,6 +134,7 @@ hr {
     width: 95%;
     margin: 15px auto;
     border-collapse: collapse;
+    margin-top: 5em;
 }
 
 .History-table th,
@@ -161,7 +162,7 @@ hr {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: 51.1px;
 }
 
 .History-pagination a {
