--- a/InventoryStyle.css
+++ b/InventoryStyle.css
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 70vh;
+    height: 65vh;
     margin-top: 3.6em;
 }
 
@@ -37,23 +37,9 @@ hr {
     align-items: center;
 }
 
-/* Search */
-.input {
-    display: flex;
-    justify-content: flex-start;
-    gap: 10px;
-    margin-top: 10px;
-    /* position: relative; */
-    /* top: 10px;
-    right: 20em;
-    bottom: 4em; */
-    
+#search-input{
+    margin-bottom: -20px;
 }
-
-/* .search-bar {
-    position: relative;
-} */
-
 .search-bar input {
     width: 300px;
     height: 40px;
@@ -73,28 +59,6 @@ hr {
     transform: translateY(-50%);
 }
 
-/* Buttons */
-.sort-btn {
-    font-size: 16px;
-    padding: 10px 20px; 
-    border: none;
-    border-radius: 30px;
-    background-color: #ff6600; 
-    color: white; 
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
-.filter-btn{
-    font-size: 16px;
-    padding: 10px 20px; 
-    border: 1px solid #ff6600;
-    background-color: white;
-    color: #ff6600;
-    border-radius: 30px;
-}
-.sort-btn img, .filter-btn img {
-    margin: 0 5px; 
-}
 .addbtn {
     position: relative;
     left: 34em;
