--- a/dashStyle.css
+++ b/dashStyle.css
@@ -104,6 +104,7 @@ body, html {
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.3s ease;
+    margin-left: 7px;
 }
 
 #submenu li {
